pages.css is linked, images are linked

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,7 +5,7 @@
   align-items: center;
   position: relative;
   box-shadow: black 0 -5px 5px;
-  background: url(../images/michael-madsen.png) no-repeat bottom left 60%;
+  background: url(../../images/michael-madsen.png) no-repeat bottom left 60%;
   background-color: black;
 
 }
