--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -17,7 +17,7 @@
   height: calc(100% - 100px);
   width: 30%;
   box-sizing: border-box;
-  background-image: url(../images/tarantino-header.jpg);
+  background-image: url(../../images/tarantino-header.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   border: white 1px solid;
